[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hello-planet"
version = "0.0.1"
description = "practicing deploying flows and supplying params to these flows"
authors = [
  { name = "Joe Duprey", email = "jduprey@uw.edu" },
]
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
  "loguru",
  "fsspec",
  "requests",
  "s3fs",
  "dask",
  "loguru",
  "pandas",
  "progressbar2",
  "typer",
  "zarr",
  "xarray",
  "netcdf4",
  "zarr",
  "lxml",
  "gspread",
  "fastparquet",
  "pygithub",
  "pendulum",
  "siphon",
  "prefect>2",
  "prefect-aws",
  "requests-html",
  "rechunker",
  "pydantic<2",
]